--- a/dev.html
+++ b/dev.html
@@ -9,34 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
-<body style="background: linear-gradient(270deg, #0000ff, #0ce8e1);
+<body style="background: linear-gradient(270deg, #0000ff, #ff0000);
 background-size: 400% 400%;
 
--webkit-animation: AnimationName 30s ease infinite;
--moz-animation: AnimationName 30s ease infinite;
--o-animation: AnimationName 30s ease infinite;
-animation: AnimationName 30s ease infinite;
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-o-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}">
+-webkit-animation: AnimationName 12s ease infinite;
+-moz-animation: AnimationName 12s ease infinite;
+-o-animation: AnimationName 12s ease infinite;
+animation: AnimationName 12s ease infinite;">
     <div id="main">
 
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
@@ -56,8 +35,8 @@ animation: AnimationName 30s ease infinite;
         <section class="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
                 <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Since before the semester starts i have been
                     preparing and learning the basics of Front-End Web Development which consist of HTML(Hyper Text
                     Markup Language) as the backbone of any website process, CSS(Cascading Style Sheets) to control
@@ -66,16 +45,26 @@ animation: AnimationName 30s ease infinite;
                     interface.
                 </p>
             </article>
+            <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
             <article>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
                 <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <p>As i progress further in my development, things started to get much more complex. During this time i
                     needed something to manage, organize, and keep track of my syntax. By using GIT i am able to keep
                     track of each revision and to also experiment implementing or whether to discard it.</p>
             </article>
+            <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
             <article>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
                 <h2 style="font-size: 40px;margin:0px;">Honing JavaScript</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
                 <p>JavaScript was my first scripting language that i ever learnt. I know how important JavaScript is in
                     a web development enviroment as it is one of the most popular and widely used programming languanges
                     in the world.</p>
@@ -86,15 +75,23 @@ animation: AnimationName 30s ease infinite;
                     in a web browser) that you can see is now used as a dynamic background for this
                     portofolio.</p>
             </article>
+            <div class="feedback">
+                <h1>Feedback</h1>
+                <img src="" class="feedbackThumbnail"></img>
+                <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+            </div>
+            <!-- <article>
+                <h2 style="font-style: italic;font-size: 40px;margin:0px;">Lorem</h2>
+            </article> -->
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="sco.html">Strategy & Concept</a>
         <a href="ux.html">UX</a>
-        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
+        <a href="sco.html">Strategy & Concept</a>
+        <a href="ptm.html">Project</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
