--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section class="content" style="margin-top: 8vw; position: fixed;background: none;color: white;">
+        <section class="content" style="margin-top: 8vw; position: fixed;background: none;color: white;box-shadow: none;">
             <h1
                 style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Welcome</h1>
             <p style="margin-top: 0px;">This site is in development. Your consideration is advised.</p><a
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
-            visual.</a>
+                visual.</a>
         </section>
 
 
@@ -50,9 +50,9 @@ animation: AnimationName 12s ease infinite;">
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="sco.html">Strategy & Concept</a>
         <a href="ux.html">UX</a>
-        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
+        <a href="sco.html">Strategy & Concept</a>
+        <a href="ptm.html">Project</a>
     </div>
 
     <!-- Scripts -->
