--- a/sco.html
+++ b/sco.html
@@ -9,34 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
-<body style="background: linear-gradient(270deg, #0000ff, #00ff00);
+<body style="background: linear-gradient(270deg, #0000ff, #ff0000);
 background-size: 400% 400%;
 
--webkit-animation: AnimationName 30s ease infinite;
--moz-animation: AnimationName 30s ease infinite;
--o-animation: AnimationName 30s ease infinite;
-animation: AnimationName 30s ease infinite;
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-o-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}">
+-webkit-animation: AnimationName 12s ease infinite;
+-moz-animation: AnimationName 12s ease infinite;
+-o-animation: AnimationName 12s ease infinite;
+animation: AnimationName 12s ease infinite;">
     <div id="main">
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
         <header>
@@ -54,41 +33,74 @@ animation: AnimationName 30s ease infinite;
         </div>
 
         <section class="content">
-            <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
             <!-- <h2 style="font-size: 40px;margin:0px;">Strategy</h2> -->
             <article id="TargetAudience">
-                <h2 style="font-size: 40px;margin:0px;">Target Audience</h4>
+
+                <h2 style="font-style: bold;font-size: 40px;margin:0px;">Target Audience</h4>
+                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+
                     <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
                         how to reach them. In order to get the general idea of the target audience, 'personas' can be
-                        used to visualize the target audience. </p><p>In this assignment i have made a few personas(in
+                        used to visualize the target audience. </p>
+                    <p>In this assignment i have made a few personas(in
                         chronological order) of one of my groupmates, my personal favorite artist, and the target
                         audience of the client.</p>
                     <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
                     <a href="" style="color: grey;">Target audience exercise 2</a>
                     <a href="" style="color: grey;">Target audience exercise 3</a>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <img src="" class="feedbackThumbnail"></img>
+                        <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    </div>
             </article>
 
             <!-- <h2 style="font-size: 40px;margin:0px;">Concept</h2> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
-                <p>Visual Association is a way to analyse on how visual images communicate a
-                    message and how images correlates to each other.</p><p>In this assigment i had to search for two different images and to visually associate them in terms of shape, content, structure, and composition.</p>
-                <a href="content/visual_semiotics.pdf">Visual semiotics PDF[Work In Progress]</a>
-            </article>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
 
-            <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
+                <p>Visual Association is a way to analyse on how visual images communicate a
+                    message and how images correlates to each other.</p>
+                <p>In this assigment i had to search for two different images and to visually associate them in terms of
+                    shape, content, structure, and composition.</p>
+                <a href="content/visual_semiotics.pdf">Visual semiotics PDF[WIP]</a>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
+            </article>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Brand Value</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <p>...</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
             </article>
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Color</h2>
+                <h2 style="font-size: 40px;margin:0px;">Colour</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <p>...</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
             </article>
             <!-- <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <p>...</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
             </article>
         </section>
     </div>
@@ -96,9 +108,9 @@ animation: AnimationName 30s ease infinite;
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="sco.html">Strategy & Concept</a>
         <a href="ux.html">UX</a>
-        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
+        <a href="sco.html">Strategy & Concept</a>
+        <a href="ptm.html">Project</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
