--- a/ux.html
+++ b/ux.html
@@ -9,34 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
-<body style="background: linear-gradient(270deg, #0000ff, #e80cce);
+<body style="background: linear-gradient(270deg, #0000ff, #ff0000);
 background-size: 400% 400%;
 
--webkit-animation: AnimationName 30s ease infinite;
--moz-animation: AnimationName 30s ease infinite;
--o-animation: AnimationName 30s ease infinite;
-animation: AnimationName 30s ease infinite;
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-o-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}">
+-webkit-animation: AnimationName 12s ease infinite;
+-moz-animation: AnimationName 12s ease infinite;
+-o-animation: AnimationName 12s ease infinite;
+animation: AnimationName 12s ease infinite;">
     <div id="main">
 
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
@@ -48,10 +27,10 @@ animation: AnimationName 30s ease infinite;
             </button>
         </header>
 
-        <!-- <iframe class="visualiframe" src="visual2.html" frameborder="0" style="position: fixed;"></iframe> -->
+        <!-- <iframe class="visualiframe" src="visual2.html" frameborder="0" style="position: fixed;"></!-->
 
         <div id="title">
-            User Experience Design
+            UX
         </div>
 
         <section class="content">
@@ -88,28 +67,52 @@ animation: AnimationName 30s ease infinite;
                         outcome.</p>
                 </article>
             </section> -->
-            <article>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
-                <h2 style="font-size: 40px;margin:0px;">Interview Preparation</h2>
+            <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
+            <article id="interview">
+                <h2 style="font-size:40px;margin:0px;">The Interview</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <h2 style="margin:0px;">Interview Preparation</h2>
                 <p></p>
-                <p>The purpose of the interview is to find out the needs of the client's target audience. This can be
-                    about the artist themself, the genre of the music the target audience is interested in, or even matters outside
-                    music that contributes to the experience such as what are the platform are the audience uses to listen and many other. 
+                <p>The purpose of the interview is to find out the needs of the client's target audience. This can
+                    be
+                    about the artist themself, the genre of the music the target audience is interested in, or even
+                    matters outside
+                    music that contributes to the experience such as what are the platform are the audience uses to
+                    listen and many other.
                 </p>
-                <h2 style="font-size: 40px;margin:0px;">Preparing the form</h2>
-                <p>As part of the exercise, a questionnaire is prepared in order to gather data from the target audience. This questionnaire covers basic questions to get the general idea of how to target audience is.</p>
-                <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a>
-                <h2 style="font-size: 40px;margin:0px;">Interview Result</h2>
+                <h2 style="margin:0px;">Preparing the form</h2>
+                <p>As part of the exercise, a questionnaire is prepared in order to gather data from the target
+                    audience. This questionnaire covers basic questions to get the general idea of how to target
+                    audience is.</p>
+                <!-- <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a> -->
+                <embed src="content/Interview Research Form.nl.en.pdf" type="application/pdf"></embed>
+                <h2 style="margin:0px;">Interview Result</h2>
                 <p>Conclusions from the interview reveals:
                     •Our client’s target group is predominantly constituted out of women.
                 </p>
                 <p>•Age ranges between 14–19 years old</p>
                 <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
-                <h2 style="font-size: 40px;margin:0px;">Storyboard</h2>
-                <p>A storyboard was originally used for the film industry. In designing user experience it is used as a tool to visualize an idea or a concept, to describe the context use of a product, and to show the emotional appeal of the product.</p>
-                <a href="content/storyboard.png">Simple sketch storyboard</a>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
+            </article>
+            <br/>
+            <h1 style="text-align:center;font-style: bold;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping
+            </h1>
+            <article id="storyboard">
+                <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>A storyboard was originally used for the film industry. In designing user experience it is used as a
+                    tool to visualize an idea or a concept, to describe the context use of a product, and to show the
+                    emotional appeal of the product.</p>
+                <img class="contentAttachment" src="content/storyboard.png"></img>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                </div>
             </article>
             <!-- <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
@@ -122,9 +125,9 @@ animation: AnimationName 30s ease infinite;
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="sco.html">Strategy & Concept</a>
         <a href="ux.html">UX</a>
-        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
+        <a href="sco.html">Strategy & Concept</a>
+        <a href="ptm.html">Project</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
