--- a/ux.html
+++ b/ux.html
@@ -27,7 +27,7 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <!-- <iframe class="visualiframe" src="visual2.html" frameborder="0" style="position: fixed;"></!-->
+        <iframe class="visualiframe" src="visual2.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             UX
