--- a/sco.html
+++ b/sco.html
@@ -42,12 +42,14 @@ animation: AnimationName 12s ease infinite;">
                     <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
                         how to reach them. In order to get the general idea of the target audience, 'personas' can be
                         used to visualize the target audience. </p>
-                    <p>In this assignment i have made a few personas(in
+                    <!-- <p>In this assignment i have made a few personas(in
                         chronological order) of one of my groupmates, my personal favorite artist, and the target
-                        audience of the client.</p>
-                    <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
+                        audience of the client.</p> -->
+                    <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
                     <a href="" style="color: grey;">Target audience exercise 2</a>
-                    <a href="" style="color: grey;">Target audience exercise 3</a>
+                    <a href="" style="color: grey;">Target audience exercise 3</a> -->
+                    <p>In this assignment i have made a persona of one of my groupmates as an exercise to visualize a target audience.</p>
+                    <img class="contentAttachment" src="content/SCO_target_audience_1.jpg" alt="Missing file">
                     <div class="feedback">
                         <h1>Feedback</h1>
                         <img src="" class="feedbackThumbnail"></img>
@@ -64,7 +66,8 @@ animation: AnimationName 12s ease infinite;">
                     message and how images correlates to each other.</p>
                 <p>In this assigment i had to search for two different images and to visually associate them in terms of
                     shape, content, structure, and composition.</p>
-                <a href="content/visual_semiotics.pdf">Visual semiotics PDF[WIP]</a>
+                <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF[WIP]</a> -->
+                <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <img src="" class="feedbackThumbnail"></img>
