--- a/ux.html
+++ b/ux.html
@@ -87,8 +87,8 @@ animation: AnimationName 12s ease infinite;">
                 <!-- <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a> -->
                 <embed src="content/Interview Research Form.nl.en.pdf" type="application/pdf"></embed>
                 <h2 style="margin:0px;">Interview Result</h2>
-                <p>Conclusions from the interview reveals:
-                    •Our client’s target group is predominantly constituted out of women.
+                <p>Conclusions from the interview reveals:</p>
+                <p>•Our client’s target group is predominantly constituted out of women.
                 </p>
                 <p>•Age ranges between 14–19 years old</p>
                 <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
@@ -98,8 +98,8 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
                 </div>
             </article>
-            <br/>
-            <h1 style="text-align:center;font-style: bold;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping
+            <br />
+            <h1 style="text-align:center;font-style: bold;font-size: 40px;margin: 20px 0px 0px 0px;">Prototype
             </h1>
             <article id="storyboard">
                 <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
@@ -107,19 +107,29 @@ animation: AnimationName 12s ease infinite;">
                 <p>A storyboard was originally used for the film industry. In designing user experience it is used as a
                     tool to visualize an idea or a concept, to describe the context use of a product, and to show the
                     emotional appeal of the product.</p>
+                <p>In this exercise i have made a simple yet understandable storyboard all drawn straight digitally.</p>
                 <img class="contentAttachment" src="content/storyboard.png"></img>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <div class="user">
+                        <img src="content/joanThumbnail.jfif" class="feedbackThumbnail"></img>
+                        <p style="font-style: italic;">"The storyboard looks nice and understandable." -Jo-An</p>
+                    </div>
+                    <div class="user">
+                        <img src="content/ariefThumbnail.JPG" class="feedbackThumbnail"></img>
+                        <p style="font-style: italic;">"I understand fully on how to use a storyboard as a useful UX
+                            design tool." -Arief</p>
+                    </div>
                 </div>
-            </article>
-            <!-- <article>
+
+    </div>
+    </article>
+    <!-- <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
             </article> -->
-        </section>
+    </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
