--- a/ptm.html
+++ b/ptm.html
@@ -53,7 +53,9 @@ animation: AnimationName 12s ease infinite;">
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="dev.html">Development</a>
+        <!-- <a href="dev.html">Development</a> -->
+        <a href="" style="color: grey;">Development[WIP]</a>
+
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
         <a href="ptm.html">Project</a>
