--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ animation: AnimationName 12s ease infinite;">
     <!-- Off-canvas menu -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="dev.html">Development</a>
+        <!-- <a href="dev.html">Development</a> -->
+        <a href="" style="color: grey;">Development[WIP]</a>
+        
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
         <a href="ptm.html">Project</a>
