--- a/dev.html
+++ b/dev.html
@@ -47,8 +47,7 @@ animation: AnimationName 12s ease infinite;">
             </article>
             <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
@@ -59,8 +58,7 @@ animation: AnimationName 12s ease infinite;">
             </article>
             <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Honing JavaScript</h2>
