--- a/ptm.html
+++ b/ptm.html
@@ -44,8 +44,7 @@ animation: AnimationName 12s ease infinite;">
                     height="400px"></embed>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
         </section>
