--- a/sco.html
+++ b/sco.html
@@ -52,8 +52,7 @@ animation: AnimationName 12s ease infinite;">
                     <img class="contentAttachment" src="content/SCO_target_audience_1.jpg" alt="Missing file">
                     <div class="feedback">
                         <h1>Feedback</h1>
-                        <img src="" class="feedbackThumbnail"></img>
-                        <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                        <p style="font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
 
@@ -70,8 +69,7 @@ animation: AnimationName 12s ease infinite;">
                 <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
             <article>
@@ -80,8 +78,7 @@ animation: AnimationName 12s ease infinite;">
                 <p>...</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
             <article>
@@ -90,8 +87,7 @@ animation: AnimationName 12s ease infinite;">
                 <p>...</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
             <!-- <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1> -->
@@ -101,8 +97,7 @@ animation: AnimationName 12s ease infinite;">
                 <p>...</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
         </section>
