--- a/ux.html
+++ b/ux.html
@@ -94,8 +94,7 @@ animation: AnimationName 12s ease infinite;">
                 <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
             <br />
@@ -111,15 +110,7 @@ animation: AnimationName 12s ease infinite;">
                 <img class="contentAttachment" src="content/storyboard.png"></img>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <div class="user">
-                        <img src="content/joanThumbnail.jfif" class="feedbackThumbnail"></img>
-                        <p style="font-style: italic;">"The storyboard looks nice and understandable." -Jo-An</p>
-                    </div>
-                    <div class="user">
-                        <img src="content/ariefThumbnail.JPG" class="feedbackThumbnail"></img>
-                        <p style="font-style: italic;">"I understand fully on how to use a storyboard as a useful UX
-                            design tool." -Arief</p>
-                    </div>
+                    <p style="font-style: italic;">As feedback from Jo-An the storyboard looks nice and understandable. I now know that a storyboard can be a useful tool for UX design.</p>
                 </div>
 
     </div>
